# sma

./: CMakeLists.txt  README.md
driver/: Makefile  sma.c  sma_calculation.c  sma_calculation.h  sma_driver.c
input/: input.txt
output/: output.txt
src/: CMakeLists.txt  sma_device.cpp  sma_device.hpp  sma_main.cpp  sma_user_read.c  sma_user_write.c
test/: CMakeLists.txt  sma_device_calculation_test.cpp  sma_device_read_test.cpp  sma_device_test.cpp  sma_device_write_test.cpp
